--- a/cexpert/Cars/templates/Cars/add_car.html
+++ b/cexpert/Cars/templates/Cars/add_car.html
@@ -8,5 +8,8 @@
 <form action="{% url 'add_car' %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
+    <div class="text-center">
+        <button class="text-center w-25 btn btn-lg btn-primary" type="submit">Добавить</button>
+    </div>
 </form>
 {% endblock%}
