--- a/cexpert/Cars/templates/Cars/add_car.html
+++ b/cexpert/Cars/templates/Cars/add_car.html
@@ -9,7 +9,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     <div class="text-center">
-        <button class="text-center w-25 btn btn-lg btn-primary" type="submit">Добавить</button>
+        <button class="btn w-25 btn-lg btn-outline-primary" type="submit">Добавить</button>
     </div>
 </form>
 {% endblock%}
