--- a/cexpert/Cars/templates/Cars/base.html
+++ b/cexpert/Cars/templates/Cars/base.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    
+    <style>
+      a {
+        font-family: Nunito;
+        font-size: 16;
+      }
+      p {
+        font-family: Nunito;
+        font-size: 2.5vh;
+      }
+    </style>
+  </head>
     <body style="min-height: 100%; border: black;">
         <div class="d-flex flex-column flex-md-row align-items-center pb-1 mb-1 border-bottom border-3">
             <a href="{% url 'home' %}" class="d-flex align-items-center text-dark text-decoration-none ms-lg-5">
-              <span class="fs-1 ms-lg-5">CarExpert</span>
+              <span class="fs-1 ms-lg-5" style="font-family:Varela Round">CarExpert</span>
             </a>
-            <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto mx-5 fs-5">
+            <nav class="d-in  line-flex mt-5 mt-md-0 ms-md-auto mx-5 fs-5">
               <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'home' %}">Найти</a>
               <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'add_car'%}">Добавить</a>
               <a class="me-3 py-2 text-dark text-decoration-none" href="admin">Админ</a>
             </nav>
         </div>
-        <div class="card" style="width: 60%;height: 100%; margin-left: 20%;">
+        <div class="card" style="width: 40%; min-height: 100%; margin-left: 30%;">
           <div class="card-body fs-5">
             {% block content %}
             {% endblock %}
