--- a/cexpert/Cars/templates/Cars/base.html
+++ b/cexpert/Cars/templates/Cars/base.html
@@ -22,10 +22,10 @@
       }
     </style>
   </head>
-    <body style="min-height: 100%; border: black;">
+    <body style="min-height: 100%; border: black;;">
         <div class="d-flex flex-column flex-md-row align-items-center pb-1 mb-1 border-bottom border-3">
             <a href="{% url 'home' %}" class="d-flex align-items-center text-dark text-decoration-none ms-lg-5">
-              <span class="fs-1 ms-lg-5" style="font-family:Varela Round">CarExpert</span>
+              <span class="fs-1 ms-lg-5" style="font-family:Varela Round;;">CarExpert</span>
             </a>
             <nav class="d-in  line-flex mt-5 mt-md-0 ms-md-auto mx-5 fs-5">
               <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'home' %}">Найти</a>
