--- a/cexpert/Cars/templates/Cars/base.html
+++ b/cexpert/Cars/templates/Cars/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -22,22 +24,23 @@
       }
     </style>
   </head>
-    <body style="min-height: 100%; border: black;;">
-        <div class="d-flex flex-column flex-md-row align-items-center pb-1 mb-1 border-bottom border-3">
+    <body style="min-height: 100%;">
+        <div class="d-flex flex-column flex-md-row align-items-center pb-1 mb-1 border-bottom border-3" style="background-color: rgb(27,36,48);">
             <a href="{% url 'home' %}" class="d-flex align-items-center text-dark text-decoration-none ms-lg-5">
-              <span class="fs-1 ms-lg-5" style="font-family:Varela Round;;">CarExpert</span>
+              <img  class="ms-5" style="height:40px; width: 40px" src="/static/img/ico.png">
+              <span class="fs-1 ms-lg-1 text-light" style="font-family:Varela Round;">CarExpert</span>
             </a>
             <nav class="d-in  line-flex mt-5 mt-md-0 ms-md-auto mx-5 fs-5">
-              <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'home' %}">Найти</a>
-              <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'add_car'%}">Добавить</a>
-              <a class="me-3 py-2 text-dark text-decoration-none" href="admin">Админ</a>
+              <a class="me-3 py-2 text-light text-decoration-none" href="{% url 'home' %}">Найти</a>
+              <a class="me-3 py-2 text-light text-decoration-none" href="{% url 'add_car'%}">Добавить</a>
+              <a class="me-3 py-2 text-light text-decoration-none" href="admin">Админ</a>
             </nav>
         </div>
-        <div class="card" style="width: 40%; min-height: 100%; margin-left: 30%;">
-          <div class="card-body fs-5">
-            {% block content %}
-            {% endblock %}
+          <div class="card" style="width: 40%; min-height: 100%; margin-left: 30%;">
+            <div class="card-body fs-5" style="border-color: aliceblue;">
+                {% block content %}
+                {% endblock %}
+            </div>
           </div>
-        </div>
     </body>
 </html>
